fix: blocks z-index

--- a/components/blocks/ImageBlock/ImageBlock.module.css
+++ b/components/blocks/ImageBlock/ImageBlock.module.css
@@ -22,6 +22,8 @@
   background: var(--color-darker-grey);
   color: var(--color-white);
   font-size: var(--font-size-sm);
+  z-index: 10;
+  position: relative;
 }
 
 .captionInput::placeholder {
@@ -40,11 +42,9 @@
   z-index: 1;
   padding: 10px 12px;
   backdrop-filter: blur(3px);
-  background: linear-gradient(
-    180deg,
-    transparent 0%,
-    color-mix(in srgb, var(--color-black) 72%, transparent) 100%
-  );
+  background: linear-gradient(180deg,
+      transparent 0%,
+      color-mix(in srgb, var(--color-black) 72%, transparent) 100%);
 }
 
 .captionText {
@@ -52,4 +52,6 @@
   font-size: var(--font-size-sm);
   line-height: 1.3;
   display: block;
+  z-index: 10;
+  position: relative;
 }
