--- a/components/builder/SortableBlock/SortableBlock.module.css
+++ b/components/builder/SortableBlock/SortableBlock.module.css
@@ -12,7 +12,8 @@
 
 .hoverZone:hover,
 .hoverZone:focus-within {
-  z-index: 50;
+  /* Elevate the entire item above its neighbors */
+  z-index: 100;
 }
 
 .frame {
@@ -32,6 +33,8 @@
   box-sizing: border-box;
   user-select: none;
   overflow: hidden;
+  /* Local baseline; child elements will layer above this */
+  z-index: 1;
 }
 
 .wrapper.emptyWrapper {
